# repo-sync

./: .gitignore  CHANGELOG.md  README.md  config.sample.yaml  install.sh  mise.toml  pyproject.toml
.claude/: settings.json
.codex/: hooks.json
.codex/hooks/: format.sh
.github/workflows/: shellcheck.yml  update-version.yml  uv-qualify.yml
mise/: common.sh
mise/scripts/: config_validate.py  test_notify.py
mise/tasks/: config-init.sh  config-validate.sh  log-follow.sh  logs.sh  service.sh  test-notify.sh  test-summary.sh
scripts/: notify-failure.sh
src/repo_sync/: cli.py  config.py  git_ops.py  sync.py  weekly_summary.py
systemd/: repo-sync-notify-failure.service  repo-sync-summary.service  repo-sync-summary.timer  repo-sync.service  repo-sync.timer
tests/: test_config.py  test_config_init.bats  test_git_ops.py  test_sync.py
