[project]
name = "repo-sync"
version = "0.1.1"
description = "Sync local git repositories with GitHub remotes"
requires-python = ">=3.12"
dependencies = [
    "discord-notify",
    "pyyaml>=6.0",
]

[tool.uv.sources]
discord-notify = { git = "ssh://git@github.com/Seika139/discord-notify.git", tag = "v0.1.1" }

[project.scripts]
repo-sync = "repo_sync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["^build/", "^\\.venv/"]

[dependency-groups]
dev = [
    "mypy>=1.18",
    "pytest>=8.0",
    "ruff>=0.11",
    "ty>=0.0.14",
    "types-pyyaml>=6.0.12.20260408",
]
